--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,9 +5,22 @@ trigger:
   branches:
     include:
       - main
+      - develop
   paths:
     include:
-      - terraform/*
+      - '*.tf'
+      - 'azure-pipelines.yml'
+
+
+pr:
+  branches:
+    include:
+      - main
+      - develop
+  paths:
+    include:
+      - '*.tf'
+      - 'azure-pipelines.yml'
 
 variables:
   # Azure Service Connection (configure in Azure DevOps)
